<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="98dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp">

    <ImageView
        android:id="@+id/recipeImage"
        android:contentDescription="@string/recipe_image"
        android:layout_width="125.71dp"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        tools:text="Black Karaage with Curry Bento"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/recipeImage"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="12sp"
        android:fontFamily="@font/montserrat"
        />

    <TextView
        android:id="@+id/smallDescription"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:textSize="12sp"
        tools:text="Is a Japanese dish that consists of skewered and grilled chicken. However, it ca.."
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/recipeImage"
        app:layout_constraintTop_toBottomOf="@+id/title"
        />

    <ImageButton
        android:id="@+id/shareIcon"
        android:contentDescription="@string/share_button"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/shareicon"
        app:layout_constraintStart_toEndOf="@+id/recipeImage"
        app:layout_constraintTop_toBottomOf="@+id/smallDescription" />

    <ImageButton
        android:id="@+id/likeIcon"
        android:contentDescription="@string/like_button"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/likeicon"
        app:layout_constraintStart_toEndOf="@+id/shareIcon"
        app:layout_constraintTop_toBottomOf="@+id/smallDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>